<resources>
    <string name="app_name">iRentTechs</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="are_you_a_new_user_register">Are you a new user ? Register</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="web_client_id">363788898559-820keg41jtf8tnccatjdc1jjhskpnr5m.apps.googleusercontent.com</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="update_profile">Update Profile</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="select_the_city">Select The City</string>
    <string name="district">District</string>
    <string name="select_the_district">Select The District</string>
    <string name="province">Province</string>
    <string name="select_the_province">Select The Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="update_address">Update Address</string>
    <string name="logout">Logout</string>
    <string name="add_products">Add Products</string>
    <string name="warning">Warning</string>
    <string name="MAPS_API_KEY">AIzaSyAaScpSGikMXnzETHUoLJpyI0QHlUtJvzQ</string>
</resources>