<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/su_constrainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <Button
        android:id="@+id/su_signuo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#7752FE"
        android:elevation="80dp"
        android:text="@string/register"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_password" />

    <LinearLayout
        android:id="@+id/su_linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_signuo_btn">

        <android.widget.Button
            android:id="@+id/su_google_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn"
            android:drawableStart="@drawable/google"
            android:elevation="8dp"
            android:padding="12dp"
            android:text="Sign In With Google"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#4285F4"
            android:textSize="16dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/su_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/already_a_user_login"
        android:textColor="@color/Prime1"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/su_linearLayout"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/su_linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/su_linearLayout" />

    <EditText
        android:id="@+id/su_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_text_input_background"
        android:drawableStart="@drawable/lemail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/email"
        android:inputType="text"
        android:textColorHint="#190482"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_mobile" />

    <EditText
        android:id="@+id/su_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_text_input_background"
        android:drawableStart="@drawable/llock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#190482"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/su_email"
        app:layout_constraintTop_toBottomOf="@+id/su_email" />

    <EditText
        android:id="@+id/su_mobile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_text_input_background"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="Mobile"
        android:inputType="phone"
        android:textColorHint="#190482"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_name" />

    <EditText
        android:id="@+id/su_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_text_input_background"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="Name"
        android:inputType="text"
        android:textColorHint="#190482"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_constraintLayout2" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/su_constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/asset_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/su_textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/amaranth_bold"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>